[gd_scene load_steps=3 format=2]

[ext_resource path="res://client/menu/menu_button.tscn" type="PackedScene" id=1]
[ext_resource path="res://client/ui/pause_menu.gd" type="Script" id=2]

[node name="PauseMenu" type="PopupPanel"]
pause_mode = 2
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
margin_left = -200.0
margin_top = -150.0
margin_right = 200.0
margin_bottom = 150.0
popup_exclusive = true
script = ExtResource( 2 )

[node name="VBoxContainer" type="VBoxContainer" parent="."]
anchor_right = 1.0
anchor_bottom = 1.0
margin_left = 5.0
margin_right = -5.0
margin_bottom = -3.0
size_flags_horizontal = 3
size_flags_vertical = 3
alignment = 1

[node name="ResumeButton" parent="VBoxContainer" instance=ExtResource( 1 )]
margin_right = 390.0
label = "Resume"
alignment = 1

[node name="NewRaceButton" parent="VBoxContainer" instance=ExtResource( 1 )]
margin_top = 84.0
margin_right = 390.0
margin_bottom = 164.0
label = "New Race"
alignment = 1

[node name="MainMenuButton" parent="VBoxContainer" instance=ExtResource( 1 )]
margin_top = 168.0
margin_right = 390.0
margin_bottom = 248.0
label = "Main Menu"
alignment = 1

[node name="QuitButton" parent="VBoxContainer" instance=ExtResource( 1 )]
margin_top = 252.0
margin_right = 390.0
margin_bottom = 332.0
label = "Quit"
alignment = 1

[connection signal="pressed" from="VBoxContainer/ResumeButton" to="." method="_on_ResumeButton_pressed"]
[connection signal="pressed" from="VBoxContainer/NewRaceButton" to="." method="_on_NewRaceButton_pressed"]
[connection signal="pressed" from="VBoxContainer/MainMenuButton" to="." method="_on_MainMenuButton_pressed"]
[connection signal="pressed" from="VBoxContainer/QuitButton" to="." method="_on_QuitButton_pressed"]
